--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -3,7 +3,7 @@
         <td><a href=".">Home</a></td>
         <td><a href="notes">TPT Notes</a></td>
         <td><a href="questions">TPT Questions</a></td>
-        <td><a href="Jackson Create Task Plan">Create Task Plan</a></td>
+        <td><a href="createtask">Create Task Plan</a></td>
         <td><a href="python">Python Project</a></td>
     </tr>
 </table>
