--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,7 +1,7 @@
 <table>
     <tr>
         <td><a href=".">Home</a></td>
-        <td><a href="notes">TPT Notes</a></td>
+        <td><a href="cbnotes">TPT Notes</a></td>
         <td><a href="questions">TPT Questions</a></td>
         <td><a href="createtask">Create Task Plan</a></td>
         <td><a href="python">Python Project</a></td>
