--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,4 +1,4 @@
-<table>
+<!-- <table>
     <tr>
         <td><a href=".">Home</a></td>
         <td><a href="cbnotes">TPT Notes</a></td>
@@ -7,3 +7,4 @@
     </tr>
 </table>
 <hr>
+-->
