--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,11 +1,9 @@
-<!-- <table>
-    <tr>
+<nav>
+    <ul class="navList" style="display: flex; justify-content: space-between; list-style-type: none">
         <td><a href=".">Home</a></td>
         <td><a href="cbnotes">TPT Notes</a></td>
         <td><a href="https://jacksongolding.github.io/Jackson-Golding/cbnoteshome"> TPT Notes home</a></td>
         <td><a href="createtask">Create Task Plan</a></td>
         <td><a href="python">Python Project</a></td>
-    </tr>
-</table>
-<hr>
--->
+    </u1>
+</nav>
